--- a/config.org
+++ b/config.org
@@ -3243,6 +3243,13 @@ Prevent done tasks to show in the agenda.
         org-agenda-skip-timestamp-if-done t))
 #+end_src
 
+Show scheduled items without a time first in the =Day Agenda=.
+
+#+begin_src emacs-lisp :tangle yes
+(after! org
+  (setq org-agenda-sort-notime-is-late nil))
+#+end_src
+
 For extra visibility, we tweak the agenda sorting strategy to make =scheduled= tasks appear first, ordered by =priority=.
 
 #+begin_src emacs-lisp :tangle yes
