--- a/config.org
+++ b/config.org
@@ -1307,17 +1307,10 @@ love?
        ;;scheme            ; a fully conniving family of lisps
        (sh +tree-sitter)                  ; she sells {ba,z,fi}sh shells on the C xor
        ;;sml
-#+end_src
-
-***** solidity
-
-Emacs has support for any buzzword you can imagine, even =blockchain technologies=.
-
-#+begin_src emacs-lisp :tangle init.el
-       solidity          ; do you need a blockchain? No.
+       ;;solidity          ; do you need a blockchain? No.
        ;;swift             ; who asked for emoji variables?
        ;;terra             ; Earth and Moon in alignment for performance.
-       ;;(web +lsp)          ; the tubes
+       ;;(web +lsp)        ; the tubes
 #+end_src
 
 ***** TODO yaml
@@ -3691,16 +3684,6 @@ We define an auto-load function as an entry point to the winter season.
 #+begin_src emacs-lisp :tangle yes
 (use-package! snow
   :commands snow)
-#+end_src
-
-*** Solidity
-
-~solidity-mode~ is a bit barebores. We can help it along adding ~company-yasnippet~ and ~company-dabbrev-code~ for better autocompletion.
-
-#+begin_src emacs-lisp :tangle yes
-(after! (solidity-mode company-solidity company-yasnippet)
-  (set-company-backend! 'solidity-mode
-    'company-solidity 'company-yasnippet 'company-dabbrev-code))
 #+end_src
 
 *** Splash Screen
