--- a/config.org
+++ b/config.org
@@ -1300,12 +1300,13 @@ love?
        (rust +lsp +tree-sitter)         ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
 #+end_src
 
-***** TODO sh
+***** sh
+This module adds support for shell scripting languages.
 
 #+begin_src emacs-lisp :tangle init.el
-       ;;scala             ; java, but good
-       ;;scheme            ; a fully conniving family of lisps
-       (sh +tree-sitter)                  ; she sells {ba,z,fi}sh shells on the C xor
+       ;;scala                 ; java, but good
+       ;;scheme                ; a fully conniving family of lisps
+       (sh +tree-sitter +lsp)  ; she sells {ba,z,fi}sh shells on the C xor
        ;;sml
        ;;solidity          ; do you need a blockchain? No.
        ;;swift             ; who asked for emoji variables?
