--- a/config.org
+++ b/config.org
@@ -1250,10 +1250,11 @@ This module adds [[https://golang.org][Go]] support, with optional (but recommen
        ;;(lua +lsp +fennel)  ; one-based indices? one-based indices
 #+end_src
 
-***** TODO markdown
+***** markdown
+This module provides Markdown support for Emacs. The =+grip= flag enables [[https://github.com/seagle0128/grip-mode][grip support]] (on [[kbd:][<localleader> p]]), to provide live github-style previews of your markdown (or org) files.
 
 #+begin_src emacs-lisp :tangle init.el
-       markdown          ; writing docs for people to ignore
+       (markdown +grip)          ; writing docs for people to ignore
 #+end_src
 
 ***** TODO nix
