--- a/config.org
+++ b/config.org
@@ -3234,7 +3234,8 @@ Don't show blocked tasks.
 
 #+begin_src emacs-lisp :tangle yes
 (after! org-agenda
-  (setq org-agenda-dim-blocked-tasks 'invisible))
+  (setq org-enforce-todo-dependencies t
+        org-agenda-dim-blocked-tasks  'invisible))
 #+end_src
 
 For extra visibility, we tweak the agenda sorting strategy to make =scheduled= tasks appear first, ordered by =priority=.
